cssを一つのファイルにまとめ 圧縮

--- a/app/assets/stylesheets/home/index.css
+++ b/app/assets/stylesheets/home/index.css
@@ -1,184 +1,9 @@
+/*ホームページ*/
+.btn,.txt-contents{display:inline-block}.btn,.message{cursor:pointer}.btn,.btn:hover{text-decoration:none}.first-icon,.top-wrapper{position:relative}.top-wrapper{margin-top:-90px;color:#fff;background-color:#87CEEB;text-align:center;padding:150px 0 130px}.top-wrapper h1{opacity:.9;font-size:45px;letter-spacing:5px;padding-top:20px}.top-wrapper p{opacity:.7;font-size:14px;margin-bottom:35px}.btn{background-color:#6495ED}.btn:hover{opacity:1}.wrapper{width:900px;margin:0 auto}.explain-seekle-wrapper{height:130px;text-align:center;background-color:#fff;border-top:2px solid #f5f5f5}.explain-seekle-wrapper p{font-size:15px;line-height:25px}.Seekle-heading{margin-top:100px;margin-right:16px;color:#5f5d60}.Seekle-heading h2{margin-top:12px}.Seekle-heading p{font-size:15px}.reason p{text-align:center;text-rendering:optimizeLegibility;width:90%;margin:0 auto}.icons{color:#F47503}.about-seekle-wrapper{height:430px;color:gray;margin:50px 70px 0;padding-top:50px;text-align:center;font-size:14px}.about-seekle-wrapper p{font-size:15px;line-height:25px}.reason{float:left;width:33%;padding-top:50px}.lesson-wrapper{height:470px;padding-bottom:100px;background-image:url(https://s-media-cache-ak0.pinimg.com/736x/f4/ac/6a/f4ac6aac3afb587f6cae04155656fca3.jpg);text-align:center;font-size:14px}.lesson-wrapper p{font-size:15px;line-height:25px}.lesson-container{margin:0 90px}.images{padding-top:34px}.how-works-explain{margin:30px}.txt-contents{width:500%;font-size:10px;color:#b3aeb5}.message-wrapper{height:290px;text-align:center;border-bottom:1px solid #eee}.message-wrapper .heading h3{font-weight:400}.message{background-color:#6495ED;box-shadow:#4682B4 0 3px;padding:15px 40px}.fa-fw{font-size:18px;padding-right:10px}
+/*プロバイダーページ */
+.pro-top-wrapper{margin-top:-90px;background-size:cover;color:#fff;background-image:url(https://pixabay.com/static/uploads/photo/2015/06/08/15/06/woman-801872_960_720.jpg);text-align:center;padding:90px 0}.pro-container{height:300px}.pro-top-wrapper h1{padding-top:70px;opacity:.9;font-size:42px;letter-spacing:2px}.pro-top-wrapper p{opacity:.7;font-size:16px;margin-bottom:35px}.btn{color:#fff;opacity:.8;padding:10px 24px;border-radius:3px}.btn.signup{font-size:17px}.btn:hover{color:#DCDCDC}.title-field{width:480px}.content-field{height:90px;width:956px}.signup{background-color:#239b76}.first-wrapper,.pro-explain-wrapper{background-color:#fff;text-align:center}.pro-explain-wrapper{height:340px;margin-bottom:-100px;border-bottom:1px solid #eee;padding:10px 0 120px}@media screen and (max-width:640px){.pro-explain-wrapper{height:800px}.All-first{width:180%}.first{clear:both}}.first-wrapper{height:420px;padding-bottom:80px;font-size:14px}.first-wrapper p{font-size:15px;line-height:25px}.heading{padding-top:40px;padding-bottom:0;color:#5f5d60}.first{float:left;width:33%}.first p{font-size:14px;line-height:20px}
+/*ご利用の流れページ*/
+.guide-wrapper{height:1900px;text-align:center}.guide-explain-wrapper,.guide_title{height:300px}.guide_title{background-color:#6495ED;margin-top:14px;border-top:2px solid gray}.guide_title h1{text-align:center;color:#fff;padding:90px;font-size:50px}.guide-explain-wrapper h2{padding-top:35px}.fa-arrow-down{color:#F47503}
 
-.top-wrapper {
-  margin-top: -90px;
-    color: white;
-    background-color: #87CEEB;
-    text-align: center;
-    padding: 150px 0 130px 0px;
-    position: relative;
-}
-
-
-
-
-
-
-.top-wrapper h1 {
-    opacity: 0.9;
-    font-size: 45px;
-    letter-spacing: 5px;
-    padding-top:20px;
-}
-
-.top-wrapper p {
-    opacity: 0.7;
-    font-size: 14px;
-    margin-bottom: 35px;
-}
-
-.btn {
-    color: white;
-    display: inline-block;
-    opacity: 0.8;
-    cursor: pointer;
-    padding: 10px 24px;
-    border-radius: 3px;
-     background-color:  #6495ED;
-    text-decoration:none;
-}
-.btn:hover{
-  opacity: 1;
-}
-
-
-
-.wrapper {
-    width: 900px;
-    margin: 0px auto;
-}
-
-
-
-.explain-seekle-wrapper
-{
-  height:130px;
-  text-align: center;
-background-color: white;
-border-top: 2px solid #f5f5f5;
-}
-
-
-.explain-seekle-wrapper p{
-    font-size:15px;
-    line-height:25px;
-}
-
-.Seekle-heading {
-    margin-top: 100px;
-margin-right: 16px;
-    color: rgb(95, 93, 96);
-}
-.Seekle-heading h2{
-
-margin-top:12px;
-
-}
-.Seekle-heading p{
-  font-size: 15px;
-}
-
-.reason p{
-  text-align: center;
-  text-rendering:optimizeLegibility;
-  width:90%;
-  margin:0 auto;
-}
-.icons{
-
-  color:#F47503;
-}
-
-.about-seekle-wrapper{
-    height:430px;
-    color:gray;
-    margin:50px 70px 0px 70px;
-    padding-top: 50px;
-
-    text-align: center;
-    font-size:14px;
-}
-
-.about-seekle-wrapper p{
-    font-size:15px;
-    line-height:25px;
-}
-
-
-.reason {
-    float: left;
-    width: 33%;
-    padding-top: 50px;
-}
-
-
-
-.lesson-wrapper {
-
-    height: 470px;
-    padding-bottom: 100px;
-    background-image: url("https://s-media-cache-ak0.pinimg.com/736x/f4/ac/6a/f4ac6aac3afb587f6cae04155656fca3.jpg");
-    text-align: center;
-    font-size:14px;
-
-}
-
-.lesson-wrapper p{
-    font-size:15px;
-    line-height:25px;
-}
-
-.lesson-container{
-  margin:0 90px;
-}
-
-.images{
-    padding-top:34px;
-}
-
-.first {
-
-    float: left;
-    width: 33%;
-}
-.first-icon {
-    position: relative;
-}
-
-.how-works-explain{
-  margin:30px;
-}
-
-
-.txt-contents {
-    width: 500%;
-    display: inline-block;
-    font-size: 10px;
-    color: rgb(179, 174, 181);
-}
-
-
-.message-wrapper {
-   height: 290px;
-    text-align: center;
-    border-bottom: 1px solid rgb(238, 238, 238);
-}
-.message-wrapper .heading h3 {
-    font-weight: normal;
-}
-.message {
-    background-color: #6495ED;
-    cursor: pointer;
-    box-shadow: #4682B4 0px 3px;
-    padding: 15px 40px;
-}
-
-
-
-
-.fa-fw{
-  font-size: 18px;
-  padding-right: 10px;
-}
-
-
-
+/*利用規約、ポリシー、特定商取引 のcss*/
+.policy-wrapper{margin-top:50px;margin-left:300px;border-radius:5px;background-color:#FFF}.policy-menu-heading,.signage-menu-heading{width:270px;float:left;background-color:#F5F5F5}.policy-menu-heading{height:2400px}.policy-menu-heading ul{margin-top:60px}.policy-menu-heading ul li{margin-top:20px}.signage-menu-heading{height:1000px}.signage-menu-heading ul{margin-top:60px}.signage-menu-heading ul li{margin-top:20px}.policy-contents{margin-top:80px;margin-left:30px;margin-right:50px;font-size:13px}.policy-contents ul li{list-style:none}.signage ul li{font-size:15px;margin-top:15px}
