cssファイルひとつにまとめる

--- a/app/assets/stylesheets/company/index.css
+++ b/app/assets/stylesheets/company/index.css
@@ -1,111 +1,8 @@
+/*会社概要*/
+.company_content{background-color:orange;height:350px;color:#fff}.company_content h1{position:absolute;top:210px;left:60%;color:#fff;padding:40px;font-size:50px}.company_explanation{height:430px;background-color:#fff;color:gray}.company_explanation h2,.company_member h2{font-size:40px;text-align:center;color:#696969}.company_explanation h2{padding-top:40px}.company_explanation ul li{line-height:43px;text-align:center}.company_explanation p{line-height:38px;text-align:center;margin-left:230px;width:800px}.company_member{height:600px;background-color:#F5F5F5}.company_member h2{padding-top:80px}.members{padding-left:300px}.member_1,.member_2,.member_3{float:left;margin:20px},.company_header,.company_philosophy{background-color:#F5F5F5;width:50%;min-height:350px;margin:auto auto 10px}
 
+/*経営理念*/
+.philosophy_content{background-color:khaki;height:380px;color:#fff}.philosophy_content h1{position:absolute;top:250px;left:60%;color:#fff;padding:40px;font-size:50px}.philosophy_explanation{height:1000px;background-color:#fff;color:gray}.philosophy_explanation h2{padding-top:70px;padding-bottom:30px;font-size:40px;text-align:center;color:#696969}.philosophy_explanation p{line-height:40px;text-align:left;font-size:18px;margin:0 300px;width:700px}
 
-.company_content{
-  background-color: orange;
-  height:350px;
-  color:white;
-}
-
-.company_content h1{
-  position: absolute;
-  top: 210px;
-  left: 60%;
-  color: white;
-    padding:40px;
-  font-size: 50px;
-
-}
-
-
-
-.company_explanation{
-height:430px;
-  background-color:white;
-  color:gray;
-}
-
-
-.company_explanation h2 {
-  padding-top: 40px;
-  font-size: 40px;
-  text-align:center;
-  color:  #696969;
-}
-
-.company_explanation ul li{
-  line-height: 43px;
-  text-align: center;
-}
-
-.company_explanation p{
-  line-height: 38px;
-  text-align: center;
-  margin-left: 230px;
-  width:800px;
-
-}
-
-.company_member{
-  height:600px;
-  background-color: #F5F5F5;
-}
-
-.company_member h2{
-  padding-top: 80px;
-  font-size: 40px;
-  text-align:center;
-  color:  #696969;
-}
-
-.members{
- padding-left: 300px;
-
-}
-
-  .member_1, .member_2, .member_3{
-    float:left;
-    margin: 20px;
-
-}
-
-
-
-.company_header,  , .company_philosophy, {
-  background-color: #F5F5F5;
-  width: 50%;
-  min-height: 350px;
-  margin: auto;
-  margin-bottom: 10px;
-    strong{
-    font-size: 18px;
-    }
-
-
-
-
-#company_image{
-  width: 100%;
-}
-
-
-
-
-#company_philosophy_header{
-  -webkit-text-stroke-color: #000;
-  -webkit-text-stroke-width: 1px;
-  #title{
-    color: white;
-    top: 400px;
-    left: 40%;
-  }
-  #subtitle{
-    color:  #DC143C;
-    top: 450px;
-    left: 40%;
-  }
-}
-
-.company_philosophy h2{
-    margin-left: 30px;
-}
-
+/*よくある質問*/
+.company_question{height:1000px}.left-menu{margin-top:90px;float:left;text-align:left}.left-menu ul li{line-height:42px;font-size:20px;margin-left:90px;cursor:pointer}.left-menu ul li:hover{border-left:2px solid gray;color:gray}.questions-wrapper h1{margin-top:100px;color:gray;text-align:center}.question{width:600px;text-align:left;margin:70px 500px}.question p{font-size:14.8px;line-height:28px}
