--- a/app/views/housing/index.html.erb
+++ b/app/views/housing/index.html.erb
@@ -36,7 +36,7 @@
       <div class="panel-heading">
         <h3 class="panel-title"><%= link_to "便利屋 修復","/notes/search" %></h3>
       </div>
-
+  <%= image_tag 'repair.png', :class => 'panel-body-housing', :size => 'cover'%>
     </div>
      </li>
 
