--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -7,23 +7,9 @@
 
 
 
+
  <div class="provider_wrapper">
 
-   <div class="service-introduction">
-      <div class="service-price_provider">
-         <h1><i class="fa fa-jpy "></i> <%= @note.price %>/月</h1>
-      </div>
-
-         <div class="service_order_btn"><div id="like-link">
-            <%= render "likes/like_links", note: @note %>
-         </div>
-    <div>
-           <small>
-               <%= link_to @note.likes.count(@note.id), id: "like-count" %>人がキープしています。
-          </small>
-    </div>
-  </div>
-</div>
 
 
   <div class="provider-introduction">
@@ -44,15 +30,12 @@
 
  <div class="service_explain">
    <h2>このサービスについて</h2>
-   <p>  <%= @note.content %></p>
+   <ul>
+    <%= @note.content %>
+  </ul>
  </div>
 
 
-  <div class="provider_service_pictures">
-    <ul>
-
-    </ul>
-  </div>
 
   <div class="rulesfromprovider">
      <h2>プロバイダーからのお願い</h2>
@@ -64,6 +47,22 @@
   <div class="reviews_providers">
      <h2>レビュー (2)</h2>
   </div>
+  <div class="service-introduction">
+      <div class="service-price_provider">
+         <h1><i class="fa fa-jpy "></i><%= @note.price %>~</h1>
+      </div>
 
-
+         <div class="service_order_btn"><div id="like-link">
+            <%= render "likes/like_links", note: @note %>
+         </div>
+    <div>
+           <small>
+               <%= link_to "このサービスを依頼", "/charges/new" %>
+          </small>
+    </div>
+  </div>
 </div>
+
+  </div>
+
+
