--- a/app/assets/stylesheets/housing/housing.css
+++ b/app/assets/stylesheets/housing/housing.css
@@ -22,7 +22,9 @@
 .provider_service_pictures{width:55%;height:420px; margin-left:144px;}
 .service_pic{float:left;width:270px;height:300px;background-color:#000;margin-top:60px;margin-left:15px}
 .rulesfromprovider{width:55%;height:270px;margin-left:144px;}
-h2{margin-left:40px;margin-top:30px;font-size:18px}
+
+.provider_wrapper h2{margin-left:40px;margin-top:30px;font-size:18px}
+
 .reviews_providers{width:55%;height:250px;margin-left:144px; background-color:#F5F5F5;}
 .main-image{background-color:gray;height:360px;}
 
