--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -43,7 +43,7 @@
      <div class=icons>
       <i class="fa fa-users fa-5x"></i>
      </div>
-  <p class="txt-contents"></p><h2>プロバイダーとは</h2>
+<h2>プロバイダーとは</h2>
   <p>サービスを提供する提供者です。プロフィール、レビュー、サービス価格などの様々な情報から、ぴったりなプロバイダーを比較できます。</p>
     </div>
   </div>
@@ -52,7 +52,7 @@
        <div class="icons">
           <i class="fa fa-money fa-5x"></i>
         </div>
-        <p class="txt-contents"></p><h2>お手頃な費用</h2>
+      <h2>お手頃な費用</h2>
 <p>高いお金を払って専門のプロ、業者に頼む前に、あなたの周りで求めるサービスを提供するプロバイダーを探すことができます。 </p>
         </div>
   </div>
@@ -62,7 +62,7 @@
        <div class="icons">
        <i class="fa fa-smile-o fa-5x"></i>
      </div>
-        <p class="txt-contents"></p><h2>豊富なジャンル</h2>
+ <h2>豊富なジャンル</h2>
 <p>カメラマン、英会話教室、ペットのしつけを頼みたいなど、Seekleは様々なジャンルのプロバイダーを見つけることのできる場です。</p>
         </div>
   </div>
