--- a/app/views/home/pro.html
+++ b/app/views/home/pro.html
@@ -36,7 +36,7 @@
        <div class="icons">
     <i class="fa fa-clock-o fa-5x"></i>
      </div>
-        <p class="txt-contents"></p><h2>スキマ時間活用</h2>
+    <h2>スキマ時間活用</h2>
 <p>子供を送り出した後の空いている時間、仕事帰り、など。人それぞれのスキマ時間にプロバイダーとして活動することで副業としてもSeekleは活躍します。</p>
         </div>
   </div>
@@ -45,7 +45,7 @@
        <div class="icons">
         <i class="fa fa-user fa-5x"></i>
         </div>
-          <p class="txt-contents"></p><h2>個人経営の方も</h2>
+      <h2>個人経営の方も</h2>
 
 <p>Seekleは個人経営の方のための広告塔としても利用できます。地域で個人教室を開いてる方など、生徒集めに無料で掲載してみませんか？</p>
         </div>
@@ -56,7 +56,7 @@
        <div class="icons">
       <i class="fa fa-bullhorn fa-5x"></i>
      </div>
-       <p class="txt-contents"></p><h2>好きな仕事をしたい！</h2>
+   <h2>好きな仕事をしたい！</h2>
 <p>"自分はこんな資格持っているのに、普段の生活で使うことがない"。 例えば、"家に人を呼んで料理教室を始めたいな" と、考えた経験はありませんか？Seekleはあなたのスキルを他の人に共有できる機会を作ります。</p>
         </div>
   </div>
