btoc向けに改善①

--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -6,7 +6,7 @@
     <ul>
      <li><a href='/users'>マイページ</a></li>
      <li><%= link_to '掲載中', notes_path %></li>
-     <li><a href='/dashboard/transaction'>取引方法</a></li>
+     <li><a href='/dashboard/transaction'>取引履歴</a></li>
      <li><a href='/users/edit'>設定</a></li>
      <li><a href='/conversations/new'>メッセージ</a></li>
     </ul>
@@ -62,7 +62,6 @@
 </div>
 
 </div>
-
 
 
 
