--- a/app/views/notes/profile.html
+++ b/app/views/notes/profile.html
@@ -1,6 +1,5 @@
 
 
-
 <div class="up-var">
   <div class="upper-menu">
     <div class="wrapper" >
@@ -20,24 +19,24 @@
 
 
 
+
+
+
+
+
+
 <div class="mypage-all_wrapper">
 
 
-   <h1 class="user_page_name"><%= current_user.user_name %>さんのページ  </h1>
-
-     <a class="profile_edit" href="/users/edit"><i class="fa fa-pencil" aria-hidden="true"></i>プロフィールを編集</a>
-
-
-
+   <h1><%= @note.user.user_name %></h1>
    <p class="rates">レビュー 1000件 ★★★★★</p>
 
  <div class="left-wrapper">
- <% if current_user.profile_pic? %>
-    <%= image_tag current_user.profile_pic.url, :class => 'mypage-picture'%>
-  <% else %>
-    <%= image_tag 'Seekle_icon-min.png', :class => 'mypage-picture'%>
-  <% end %>
-
+ <% if @note.user.profile_pic? %>
+   <%= image_tag @note.user.profile_pic.url, :class => 'mypage-picture'%>
+ <% else %>
+   <%= image_tag 'Seekle_icon.png', :class => 'mypage-picture'%>
+ <% end %>
 </div>
 
 
@@ -46,31 +45,46 @@
    <tbody>
     <tr>
      <th>所在地：</th>
-      <td><%= current_user.area %></td>
+      <td><%= @note.user.area %></td>
     </tr>
     <tr>
      <th>営業時間：</th>
-      <td><%= current_user.area %></td>
+      <td><%= @note.user.area %></td>
     </tr>
      <tr>
      <th>定休日：</th>
-      <td> <%= current_user.area %>　</td>
+      <td> <%= @note.user.area %>　</td>
     </tr>
   </tbody>
 </table>
 
 
-
   <div class="about-profiles">
-    <h3>自己紹介：</h3> <p><%=current_user.profile %>
-    <% if current_user.profile.blank? %>
-    <%= link_to 'プロフィール編集ページ', '/users/edit' %>から設定してください。
+    <h3>自己紹介：</h3> <p><%= @note.user.profile %>
+     <% if @note.user.profile.blank? %>
+     <p>プロフィールがまだ記入されていません。</p>
      <%end%>
     </p>
       <h3> レビュー：</h3>
        <ul class="notes">
       </ul>
 
+<h3>掲載中のサービス：</h3>
+    <% @notes.each do |note|  %>
+    <% if note.user==current_user %>
+ <ul>
+
+    <li> <div class="panel panel-default">
+       <div class="panel-heading">
+        <%= link_to note.title, note_path(note) %>
+       </div>
+
+      </div>
+    </li>
+</ul>
+
+     <% end %>
+     <% end %>
 
 </div>
   </div>
