notesレイアウト変更

--- a/app/assets/stylesheets/notes/index.css
+++ b/app/assets/stylesheets/notes/index.css
@@ -38,7 +38,7 @@ padding-bottom: 22px;
 }
 
 .list-number{
-margin-left: 630px;
+margin-left: 43%;
 margin-top: 50px;
 clear:both;
 }
@@ -46,6 +46,7 @@ clear:both;
 .list-number-2{
   margin-left: 630px;
 margin-top: 50px;
+clear:both;
 }
 
  .panel-heading {
