--- a/app/views/notes/search.html.erb
+++ b/app/views/notes/search.html.erb
@@ -61,7 +61,7 @@
           <% end %>
         </ul>
       <div class="bootstrap">
-       <div class="list-number clearfix">
+       <div class="list-number-2 clearfix">
          <%= paginate(@notes) %>
       
       </div>
