--- a/app/assets/stylesheets/dashboard/index.css
+++ b/app/assets/stylesheets/dashboard/index.css
@@ -1,6 +1,6 @@
 .jobstyle-row,.jobstyle-row ul li,.jobstyle-row ul li:hover{-webkit-tap-highlight-color:transparent}.jobstyle-row{text-align:center;cursor:pointer;border-bottom:2px solid #ebebeb;transition:all .5s}.jobstyle-row ul li{text-transform:uppercase;font-size:14px;float:left;box-sizing:border-box;border-right:1px solid #ebebeb;overflow:hidden}.jobstyle-row ul li:hover{color:gray}.left-wrapper{margin-left:160px;margin-top:20px;float:left;padding-right:20px}.right-wrapper{margin-top:140px;margin-right:150px;float:left}.security-heading{width:241px;height:44px;background-color:#A9A9A9;color:#fff;font-weight:700;clear:left;margin-top:-16px;border-radius:2px} .mypage-all_wrapper h1{float:left;margin-left: 180px; font-weight: 500;  line-height: 1.3em; width:56%; }.mypage-all_wrapper{padding-top:18px;width:100%; }.mypage-all_wrapper h3{margin-top:50px} .rates{line-height:0px;margin-left: 185px;   clear: both;}
 .mypage-picture{height:260px;width:270px;margin-left:50px;border-radius:9%;}
-.mypage_wrapper{height:100%;margin-top:30px; margin-bottom:30px;float:left;width:49%}.mypage_wrapper h1{font-weight:400; }.mypage_wrapper p{line-height:26px}.introduce-wrapper{height:200px;width:670px;border:2px solid silver}.user-small-picture{height:50px;width:50px;background-color:gray;float:left;margin-left:11px;border-radius:100%}.listing-wrapper{height:0 auto;background-color:#FFF;margin-top:-17px} .mypage-all_wrapper a{}
+.mypage_wrapper{height:100%;margin-top:30px; margin-bottom:30px;float:left;width:49%}.mypage_wrapper h1{font-weight:400; }.mypage_wrapper p{line-height:26px}.introduce-wrapper{height:200px;width:670px;border:2px solid silver}.user-small-picture{height:50px;width:50px;background-color:gray;float:left;margin-left:11px;border-radius:100%}.listing-wrapper{height:0 auto;background-color:#FFF;margin-top:-17px} 
 .about-profiles{margin-top: 60px; margin-left: -320px; float:left;}
 .about-profiles h3{
   font-weight: normal;
@@ -44,11 +44,7 @@ border-bottom: 1px solid #ccc;
 
 
 
-
-
-
-
-.menu-heading h3{margin:50px}.menu-heading{width:270px;float:left;height:840px;background-color:#F5F5F5}.btn-new-listing{background-color:#D2691E;color:#fff;border-radius:2px;border:1px solid;text-align:center;vertical-align:middle;display:inline-block;font-weight:700;line-height:1.43;-webkit-user-select:none;padding:10px 20px;font-size:14px}.provider-listings-heading h2{float:center;margin-left:330px;padding-top:60px}.provider-listings ul li{background-color:#fff;margin-top:50px;float:center;margin-left:350px;height:150px;width:700px;border-radius:5px}.panel-body-list{height:130px}.service_image{height:100px;width:170px;margin-top:16px;margin-left:20px}.panel-heading{height:40px}
+.provider-listings-heading h2{float:center;margin-left:330px;padding-top:60px}.provider-listings ul li{background-color:#fff;margin-top:50px;float:center;margin-left:20%;height:150px;width:700px;border-radius:5px}.panel-body-list{height:130px}.service_image{height:100px;width:170px;margin-top:16px;margin-left:20px}.panel-heading{height:40px}
 
 .payment-page{margin-left: 370px; margin-top:100px; height:900px;}
 .payment-page h1{font-weight: normal;}
