--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -10,7 +10,7 @@
  <div class="provider_wrapper">
 
   <div class="provider-introduction">
-
+  <h1>  <%= @note.title %></h1>
   <% if @note.user.profile_pic? %>
     <%= link_to image_tag(@note.user.profile_pic.url, :class => 'face_pic'),  profile_note_path %>
 
@@ -18,10 +18,34 @@
        <%= image_tag 'Seekle_icon.png', :class => 'face_pic'%>
      <% end %>
 
-         <h1>  <%= @note.title %></h1>
-          提供者：<%= link_to @note.user.user_name, profile_note_path %><br />
-          エリア：<%= @note.user.area %><br />
-          サービスカテゴリー： <%= @note.category %>
+       
+
+
+
+  <table class="sample_03">
+   <tbody>
+    <tr>
+     <th>提供者：</th>
+      <td><%= link_to @note.user.user_name, profile_note_path %></td>
+    </tr>
+    <tr>
+     <th>エリア：</th>
+      <td><%= @note.user.area %></td>
+    </tr>
+     <tr>
+     <th>カテゴリー：</th>
+      <td><%= @note.category %></td>
+    </tr>
+  </tbody>
+</table>
+
+
+
+            <h2><i class="fa fa-jpy "></i><%= @note.price %>~</h2>
+      
+             <small>
+               <%= link_to "このサービスを依頼", "/charges/new", :class => 'service_order_btn' %>
+          </small>
   </div>
 
  <div class="service_explain">
@@ -41,23 +65,9 @@
   <div class="reviews_providers">
      <h2>レビュー (2)</h2>
   </div>
-  <div class="service-introduction">
-      <div class="service-price_provider">
-         <h1><i class="fa fa-jpy "></i><%= @note.price %>~</h1>
-      </div>
 
-         <div class="service_order_btn"><div id="like-link">
-            <%= render "likes/like_links", note: @note %>
-         </div>
-    <div>
-           <small>
-               <%= link_to "このサービスを依頼", "/charges/new" %>
-          </small>
-    </div>
 
-  </div>
-        <p> <%= link_to "メッセージを送る", new_conversation_path %></p>
-</div>
+ 
 
   </div>
 
