--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -15,16 +15,11 @@
   </div>
 
 
-
-
  <div class="listing-wrapper">
  <div class="provider-listings">
   <div class="provider-listings-heading">
     <h2>あなたのサービス</h2>
   </div>
-
-
-
 
 
 <div class="bootstrap">
@@ -54,5 +49,10 @@
 </div>
 
 
-
+<div class="bootstrap">
+       <div class="list-number-2 clearfix">
+         <%= paginate(@notes) %>
+      
+      </div>
+     </div>
 
