--- a/app/views/notes/profile.html
+++ b/app/views/notes/profile.html
@@ -31,6 +31,8 @@
    <h1><%= @note.user.user_name %></h1>
    <p class="rates">レビュー 1000件 ★★★★★</p>
 
+<div class="provider-contents">
+
  <div class="left-wrapper">
  <% if @note.user.profile_pic? %>
    <%= image_tag @note.user.profile_pic.url, :class => 'mypage-picture'%>
@@ -44,23 +46,33 @@
   <table class="sample_03">
    <tbody>
     <tr>
-     <th>所在地：</th>
-      <td><%= @note.user.area %></td>
-    </tr>
+    
     <tr>
      <th>営業時間：</th>
       <td><%= @note.user.area %></td>
     </tr>
+
      <tr>
      <th>定休日：</th>
       <td> <%= @note.user.area %>　</td>
     </tr>
+
+    <tr>
+    <th>所在地：</th>
+      <td><%= @note.user.area %></td>
+    </tr>
+    
+    <tr>
+    <th>お支払い：</th>
+      <td><%= @note.user.area %></td>
+    </tr>
+   
   </tbody>
 </table>
 
 
   <div class="about-profiles">
-    <h3>自己紹介：</h3> <p><%= @note.user.profile %>
+    <h3>店舗紹介：</h3> <p><%= @note.user.profile %>
      <% if @note.user.profile.blank? %>
      <p>プロフィールがまだ記入されていません。</p>
      <%end%>
@@ -88,4 +100,4 @@
 
 </div>
   </div>
-
+</div>
