--- a/app/views/notes/profile.html
+++ b/app/views/notes/profile.html
@@ -28,14 +28,14 @@
 <div class="mypage-all_wrapper">
 
 
-   <h1><%= @note.user.user_name %></h1>
+   <h1><%= @note.provider.storename %></h1>
    <p class="rates">レビュー 1000件 ★★★★★</p>
 
 <div class="provider-contents">
 
  <div class="left-wrapper">
- <% if @note.user.profile_pic? %>
-   <%= image_tag @note.user.profile_pic.url, :class => 'mypage-picture'%>
+ <% if @note.provider.provider_pic? %>
+   <%= image_tag @note.provider.provider_pic.url, :class => 'mypage-picture'%>
  <% else %>
    <%= image_tag 'Seekle_icon.png', :class => 'mypage-picture'%>
  <% end %>
@@ -49,22 +49,22 @@
     
     <tr>
      <th>営業時間：</th>
-      <td><%= @note.user.area %></td>
+      <td><%= @note.provider.hours %></td>
     </tr>
 
      <tr>
      <th>定休日：</th>
-      <td> <%= @note.user.area %>　</td>
+      <td> <%= @note.provider.holiday %>　</td>
     </tr>
 
     <tr>
     <th>所在地：</th>
-      <td><%= @note.user.area %></td>
+      <td><%= @note.provider.address %></td>
     </tr>
     
     <tr>
     <th>お支払い：</th>
-      <td><%= @note.user.area %></td>
+      <td><%= @note.provider.payment %></td>
     </tr>
    
   </tbody>
@@ -72,8 +72,8 @@
 
 
   <div class="about-profiles">
-    <h3>店舗紹介：</h3> <p><%= @note.user.profile %>
-     <% if @note.user.profile.blank? %>
+    <h3>店舗紹介：</h3> <p><%= @note.provider.about %>
+     <% if @note.provider.about.blank? %>
      <p>プロフィールがまだ記入されていません。</p>
      <%end%>
     </p>
@@ -83,7 +83,7 @@
 
 <h3>掲載中のサービス：</h3>
     <% @notes.each do |note|  %>
-    <% if note.user==current_user %>
+    <% if note.provider==current_provider %>
  <ul>
 
     <li> <div class="panel panel-default">
