--- a/app/assets/stylesheets/providers/providers.css
+++ b/app/assets/stylesheets/providers/providers.css
@@ -1,9 +1,10 @@
+
 .providers_signup{
 
 
-	margin-top:6%;
-	margin-left:25%;
-	margin-bottom: 10%;
+    margin-top:6%;
+    margin-left:25%;
+    margin-bottom: 10%;
 }
 
 .providers_signup h3{
@@ -15,8 +16,9 @@
 }
 
 .providers_signup h2{
-	font-weight:normal;
-	font-size: 30px;
+    font-weight:normal;
+    font-size: 30px;
+clear:both;
 
 }
 
@@ -34,7 +36,7 @@
     width: 40%;
 }
 
-.provider_join_btn{margin-top:10%;margin-left:20%;font-size:16px;font-weight:700;text-decoration:none;display:block;text-align:center;padding:9px;cursor:pointer;border:1px solid #333;color:#fff;background-color:	#FA8072
+.provider_join_btn{margin-top:10%;margin-left:20%;font-size:16px;font-weight:700;text-decoration:none;display:block;text-align:center;padding:9px;cursor:pointer;border:1px solid #333;color:#fff;background-color: #FA8072
 ;box-shadow:2px 2px #808080;width:26%; border-radius:3%; margin-top:2%;}
 .provider_join_btn:active{box-shadow:0 0 ;margin-top:4%; }
 
@@ -42,5 +44,7 @@
 ;box-shadow:2px 2px #808080;width:26%; border-radius:3%; margin-top:2%;}
 .provider_delete_btn:active{box-shadow:0 0 ;margin-top:4%; }
 
+
+.edit-button{margin-left:50%}
 
 
