--- a/app/views/providers/index.html
+++ b/app/views/providers/index.html
@@ -2,79 +2,67 @@
   <div class="upper-menu">
     <div class="wrapper" >
       <ul>
-        <li><a href='/users'>マイページ</a></li>
+        <li><a href='providers/main'>マイページ</a></li>
         <li><a href='/mailbox/inbox'>メッセージ</a></li>
-        <li><%= link_to '掲載中', notes_path %></li>
+        <li><a href='notes'>掲載中</a></li>
         <li><a href='/dashboard/transaction'>取引履歴</a></li>
-        <li><a href='/providers/edit'>基本情報</a></li>
+        <li><a href='#'>基本情報</a></li>
       </ul>
     </div>
   </div>
 </div>
 
 
-
-
-<div class="mypage-all_wrapper">
-
-
-   <h1 class="user_page_name">ようこそ <%= current_provider.storename %> さん </h1>
+<div class="providers_signup">
 
 
 
-   <p class="rates">レビュー 1000件 ★★★★★</p>
-
-<div class="provider-contents">
-
- <div class="left-wrapper">
- <% if current_provider.provider_pic? %>
-    <%= image_tag current_provider.provider_pic.url, :class => 'mypage-picture'%>
-  <% else %>
-    <%= image_tag 'Seekle_icon-min.png', :class => 'mypage-picture'%>
-  <% end %>
+<div class="bootstrap">
+<div class="edit-button">
+<a class="btn btn-default" href="/providers/edit" role="button"><i class="fa fa-pencil" aria-hidden="true"></i>プロフィールを編集</a>
 </div>
-
- <div class="mypage_wrapper">
-  <table class="sample_03">
-   <tbody>
-    <tr>
-    
-    <tr>
-     <th>営業時間：</th>
-      <td><%= current_provider.hours %></td>
-    </tr>
-
-     <tr>
-     <th>定休日：</th>
-      <td> <%= current_provider.holiday %></td>
-    </tr>
-
-    <tr>
-    <th>所在地：</th>
-      <td><%= current_provider.address %></td>
-    </tr>
-    
-    <tr>
-    <th>お支払い：</th>
-      <td><%= current_provider.payment %></td>
-    </tr>
-   
-  </tbody>
-</table>
+</div>
+<h2>店舗の基本情報</h2> 
 
 
-
-  <div class="about-profiles">
-    <h3>店舗紹介：</h3> <p><%=current_provider.about %>
-    <% if current_provider.about.blank? %>
-    <%= link_to 'プロフィール編集ページ', '/users/edit' %>から設定してください。
-     <%end%>
-    </p>
-      <h3> レビュー：</h3>
-       <ul class="notes">
-      </ul>
+ <div class="field">
+    <h3>営業時間</h3>
+    <%= current_provider.hours %>
   </div>
- </div>
-</div>
+  
+ <div class="field">
+    <h3>店舗概要</h3>
+   <%= current_provider.about %>
+  </div>
 
+
+   <div class="field">
+    <h3>定休日</h3>
+   <%= current_provider.holiday %>
+  </div>
+
+  <h2>店舗の基本情報</h2>
+
+
+   <div class="field">
+    <h3>住所</h3>
+    <%= current_provider.address %>
+  </div>
+
+    <div class="field">
+    <h3>お支払い方法</h3>
+    <%= current_provider.payment %>
+  </div>
+
+  <div class="field">
+    <h3>電話番号</h3>
+   <%= current_provider.phonenumber %>
+  </div>
+
+  <div class="field">
+    <h3>メールアドレス</h3>
+   <%= current_provider.email %>
+  </div>
+
+</div>
 
