メッセージを分けた

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,18 +1,17 @@
-
-
 <div class="up-var">
- <div class="upper-menu">
+  <div class="upper-menu">
     <div class="wrapper" >
-    <ul>
-     <li><a href='/users'>マイページ</a></li>
-     <li><%= link_to '掲載中', notes_path %></li>
-     <li><a href='/dashboard/transaction'>取引方法</a></li>
-     <li><a href='/users/edit'>設定</a></li>
-     <li><a href='/conversations/new'>メッセージ</a></li>
-    </ul>
+      <ul>
+        <li><a href='/users'>マイページ</a></li>
+         <li><a href='/mailbox/inbox'>メッセージ
+
+        <li><a href='/dashboard/transaction'>取引履歴</a></li>
+        <li><a href='/users/edit'>基本設定</a></li>
+       
+      </ul>
     </div>
   </div>
-  </div>
+</div>
 
 
 
