--- a/app/views/mailbox/inbox.html.erb
+++ b/app/views/mailbox/inbox.html.erb
@@ -2,15 +2,17 @@
   <div class="upper-menu">
     <div class="wrapper" >
       <ul>
-        <li><a href='/providers/main'>マイページ</a></li>
-        <li><a href='#'>メッセージ</a></li>
-        <li><%= link_to '掲載中', notes_path %></li>
+        <li><a href='/users'>マイページ</a></li>
+         <li><a href='/mailbox/inbox'>メッセージ
+
         <li><a href='/dashboard/transaction'>取引履歴</a></li>
-        <li><a href='/providers'>基本情報</a></li>
+        <li><a href='/users/edit'>基本設定</a></li>
+       
       </ul>
     </div>
   </div>
 </div>
+
 
 
 
