--- a/app/views/providers/index.html
+++ b/app/views/providers/index.html
@@ -2,9 +2,9 @@
   <div class="upper-menu">
     <div class="wrapper" >
       <ul>
-        <li><a href='providers/main'>マイページ</a></li>
-        <li><a href='/mailbox/inbox'>メッセージ</a></li>
-        <li><a href='notes'>掲載中</a></li>
+        <li><a href='/providers/main'>マイページ</a></li>
+        <li><a href='/providers/inbox'>メッセージ</a></li>
+        <li><%= link_to '掲載中', notes_path %></li>
         <li><a href='/dashboard/transaction'>取引履歴</a></li>
         <li><a href='#'>基本情報</a></li>
       </ul>
