--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -5,7 +5,7 @@
         <li><a href='/providers/main'>マイページ</a></li>
         <li><a href='/providers/inbox'>メッセージ</a></li>
         <li><%= link_to '掲載中', notes_path %></li>
-        <li><a href='/dashboard/transaction'>取引履歴</a></li>
+        <li><a href=''>取引履歴</a></li>
         <li><a href='/providers'>基本情報</a></li>
       </ul>
     </div>
