--- a/app/views/providers/show.html.erb
+++ b/app/views/providers/show.html.erb
@@ -4,7 +4,7 @@
     <ul>
      <li><a href='/users/profile'>マイページ</a></li>
      <li><%= link_to '掲載中', notes_path %></li>
-     <li><a href='/dashboard/transaction'>取引方法</a></li>
+     <li><a href=''>取引履歴</a></li>
      <li><a href='/users/edit'>設定</a></li>
      <li><a href='/mailbox/inbox'>受信トレイ
 <div class="bootstrap">
