--- a/app/views/mailbox/inbox.html.erb
+++ b/app/views/mailbox/inbox.html.erb
@@ -5,7 +5,7 @@
         <li><a href='/users'>マイページ</a></li>
          <li><a href='/mailbox/inbox'>メッセージ
 
-        <li><a href='/dashboard/transaction'>取引履歴</a></li>
+        <li><a href=''>取引履歴</a></li>
         <li><a href='/users/edit'>基本設定</a></li>
        
       </ul>
