--- a/app/views/mailbox/sent.html.erb
+++ b/app/views/mailbox/sent.html.erb
@@ -6,7 +6,7 @@
     <ul>
      <li><a href='/users/index'>マイページ</a></li>
      <li><%= link_to '掲載中', notes_path %></li>
-     <li><a href='/dashboard/transaction'>取引方法</a></li>
+     <li><a href=''>取引方法</a></li>
      <li><a href='/users/edit'>設定</a></li>
      <li><a href='/mailbox/inbox'>メッセージ</a></li>
     </ul>
